data/all_generated_tests/raw_wast_tests/br_table_ImproperFunctionCallorReturnHandling_2419.wast
;; 9. **Test of Function Calls with br_table Managed Parameter Passing**:     - Create functions that accept parameters through operand stack manipulation controlled via `br_table`.    - *Constraint*: Verify that parameter passing to functions using `br_table` targets is handled correctly.    - *Relation to Improper Function Call or Return Handling*: Ensures that parameters passed to functions through operand stack manipulation are consistent and preserved correctly across `br_table` branches.

(assert_invalid
  (module
    (func $function-call-br_table-param-test (param i32) (result i32)
      (block
        (i32.const 0) (i32.const 1) (br_table 0 0 (i32.const 1))
      )
      (call $function-with-wrong-param (i32.const 3))
      (local.get 0)
    )
    (func $function-with-wrong-param (param i64) (result i32)
      (i32.const 42)
    )
  )
  "type mismatch"
)